# CppND-Capstone-Tetris-Game

./: CMakeLists.txt  Makefile  README.md  vokoscreen-2020-06-29_00-47-58.mkv
docs/: class_diagram.puml
src/: board.cpp  board.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  pieces.cpp  pieces.h  renderer.cpp  renderer.h
test/: test.cpp
